Saving event Speciffics correctly

--- a/frontend/src/app/event-features/event-delete/event-delete.component.html
+++ b/frontend/src/app/event-features/event-delete/event-delete.component.html
@@ -8,5 +8,5 @@
       <p>Img url: {{event.imgUrl}}</p>
       <p>Members: {{event.maxParticipants}}</p>
     </div>
-    <button type="submit" (click)="delete()">delete</button>
+    <button type="submit" (click)="delete(event)">delete</button>
 </div>
