--- a/frontend/src/app/event/event.component.html
+++ b/frontend/src/app/event/event.component.html
@@ -8,4 +8,4 @@
   </li>
 </ul>
 <app-event-detail [event]="selectedEvent" class="card"></app-event-detail>
-<app-event-form class="card"></app-event-form>
+<app-event-form ></app-event-form>
