--- a/frontend/src/app/event-features/event-form/event-form.component.html
+++ b/frontend/src/app/event-features/event-form/event-form.component.html
@@ -11,7 +11,6 @@
             <span>Name field is required</span>
         </div>
     </div>
-
       <div>
         <label for="topic">Topic:</label>
         <input type="text" class="form-control" id="topic" required [(ngModel)]="eventModel.topic" name="topic" #topic="ngModel">
@@ -47,5 +46,5 @@
           <span>The maximum of participants field is required</span>
       </div>
       </div>
-      <button type="submit" class="btn btn-default" [disabled]="!eventForm.form.valid" (click)="newEvent(); OnSelect(eventModel)">New Event</button>
-    
+       <button type="submit" class="btn btn-default" [disabled]="!eventForm.form.valid" (click)="newEvent(); OnSelect(eventModel)">New Event</button>
+    <!---- <app-event-specifics [event]="eventModel"></app-event-specifics> -->
