--- a/frontend/src/app/private-chat-window/private-chat-window.component.sass
+++ b/frontend/src/app/private-chat-window/private-chat-window.component.sass
@@ -219,24 +219,52 @@ body
       height: calc(100vh - 350px)
       overflow-x: auto
 
+.custom-timestamp 
+  font-size: 12px
+  color: #888
+  margin-right: 5px
 
-// .my-message
-//   float: right
-//   background-color: #007bff
-//   color: #000000
-//   border-radius: 5px
-//   margin: 5px
-//   padding: 8px 15px
+.chat-container 
+  height: 400px
+  overflow-y: scroll
 
-// .other-message
-//   float: left
-//   background-color: #e97070
-//   color: #333
-//   border-radius: 5px
-//   margin: 5px
-//   padding: 8px 15px
 
-// .clearfix-right::after, .clearfix-left::after
-//   content: ""
-//   display: table
-//   clear: both
+.message
+  padding: 10px
+  margin: 10px 0
+  border-radius: 10px
+  display: flex
+  align-items: center
+
+.my-message
+  background-color: #DCF8C6
+  justify-content: flex-end
+
+.other-message
+  background-color: #E5E5EA
+
+.message-content
+  margin: 0 10px
+
+.message-img
+  width: 40px
+  height: 40px
+  border-radius: 50%
+  object-fit: cover
+
+.participants-list
+  display: flex
+  flex-wrap: wrap
+
+  .chat-list
+    display: flex
+    flex-wrap: wrap
+    padding: 0
+    margin: 0
+
+  .clearfix
+    width: calc(33.33% - 10px)
+    padding: 5px
+    box-sizing: border-box
+
+
