--- a/frontend/src/app/event-features/event-detail/event-detail.component.html
+++ b/frontend/src/app/event-features/event-detail/event-detail.component.html
@@ -1,16 +1,21 @@
 <div *ngIf="event">
-  <h2>{{event.name | uppercase}} Details</h2>
-  <div >
-    <p>Name: {{event.name}}</p>
-    <p>Created by: {{event.createdby}}</p>
-    <p>Topic: {{event.topic}}</p>
-    <p>Description: {{event.description}}</p>
-    <p>Members: {{event.maxParticipants}}</p>
+  <h2>{{ event.name | uppercase }} Details</h2>
+  <div>
+    <p>Name: {{ event.name }}</p>
+    <p>Created by: {{ event.createdBy }}</p>
+    <p>Topic: {{ event.topic }}</p>
+    <p>Description: {{ event.description }}</p>
+    <p>Members: {{ event.maxParticipants }}</p>
+
   </div>
 
   <button type="submit" (click)="onUpdateded()">update</button>
-  <app-event-edit [hidden]="updated" [event]="selectedEvent" ></app-event-edit>
-  <button type="submit" (click)="onDeleted()" href="/event-delete">delete</button>
-  <app-event-delete [hidden]="deleted" [event]="selectedEvent" ></app-event-delete>
-  <button type="submit" (click)="onRegister()">register</button>
-  <app-event-register [hidden]="registered" [event]="selectedEvent" ></app-event-register>
+  <app-event-edit [hidden]="updated" [event]="selectedEvent"></app-event-edit>
+
+  <button type="submit" (click)="onDeleted()">delete</button>
+  <app-event-delete [hidden]="deleted" [event]="selectedEvent"></app-event-delete>
+
+  <button type="submit" (click)="onSpecifics()">show specifics</button>
+  <app-event-specifics-details [hidden]="specifics" [events]="event"></app-event-specifics-details>
+</div>
+
