--- a/frontend/src/app/event-features/event-register/event-register.component.html
+++ b/frontend/src/app/event-features/event-register/event-register.component.html
@@ -8,28 +8,24 @@
   <p><strong>Name:</strong> {{ currentUser.firstname }}</p>
   <p><strong>Lastname:</strong> {{ currentUser.lastname }}</p>
 </div>
-{{ registUserEventModel | json }}
 <button type="button" (click)="registerUserToEvent()">Confirm participation</button>
-<!--
-
-{{ registerModel | json}}
-
-<button type="submit" (click)="register()">register</button>
-
-<div>
-    <p>CONFIRM YOUR PRESENSE!</p>
+<div class="card mb-3">
+  <div class="card-header bg-primary text-white">
+    <h1>Register</h1>
+  </div>
+  <div class="card-body">
+    <div *ngIf="eventSpecifics">
+      <h2>Event Specifics for {{ eventSpecifics.events?.name }}</h2>
+      <p><strong>City:</strong> {{ eventSpecifics.city?.name }}</p>
+      <p><strong>Date:</strong> {{ eventSpecifics.date }}</p>
+    </div>
     <div>
-        User: {{ User.firstname }} | {{ User.lastname }}
+      <p><strong>Name:</strong> {{ currentUser.firstname }}</p>
+      <p><strong>Lastname:</strong> {{ currentUser.lastname }}</p>
     </div>
-    <p>The event specifics JSON </p>
-    {{ specifics | json}}
-    <div *ngIf="specifics">
-        Event: {{ specifics.events?.name }} | {{ specifics.events?.topic }}
-        Date: {{ specifics.date }}
-        City: {{ specifics.city?.name}}
-        </div>
-    </div>
+    <button type="button" class="btn btn-primary" (click)="registerUserToEvent()" [ngClass]="{'btn-success': clicked}">
+      Confirm participation
+    </button>
+  </div>
+</div>
 
-
-
--->
