--- a/frontend/src/app/event-features/event-edit/event-edit.component.html
+++ b/frontend/src/app/event-features/event-edit/event-edit.component.html
@@ -1,47 +1,52 @@
-<div *ngIf="event">
-  <h1>Update the event</h1>
-  <div [hidden]="submitted">
-    <form (ngSubmit)="onSubmit()" #eventForm="ngForm" >
-        <div>
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" id="name" required name="name" [(ngModel)]="event.name" #name="ngModel"/>
-            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-              <span>Name field is required</span>
+<div class="card mb-3">
+  <div class="card-header bg-primary text-white">
+    <h1>Update the event</h1>
+  </div>
+  <div class="card-body">
+    <div *ngIf="!submitted">
+      <form (ngSubmit)="onSubmit()" #eventForm="ngForm">
+        <div class="mb-3">
+          <label for="name" class="form-label">Name:</label>
+          <input type="text" class="form-control" id="name" required name="name" [(ngModel)]="event.name" #name="ngModel" />
+          <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger mt-2">
+            <span>Name field is required</span>
           </div>
         </div>
-    
-          <div>
-            <label for="topic">Topic:</label>
-            <input type="text" class="form-control" id="topic" required name="topic" [(ngModel)]="event.topic" #topic="ngModel"/>
-            <div [hidden]="topic.valid || topic.pristine" class="alert alert-danger">
-              <span>Topic field is required</span>
+
+        <div class="mb-3">
+          <label for="topic" class="form-label">Topic:</label>
+          <input type="text" class="form-control" id="topic" required name="topic" [(ngModel)]="event.topic" #topic="ngModel" />
+          <div *ngIf="topic.invalid && (topic.dirty || topic.touched)" class="alert alert-danger mt-2">
+            <span>Topic field is required</span>
           </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="description" class="form-label">Description:</label>
+          <textarea type="text" class="form-control" id="description" required name="description" [(ngModel)]="event.description" #description="ngModel"></textarea>
+          <div *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger mt-2">
+            <span>Description field is required</span>
           </div>
-          <div>
-            <label for="description">Description:</label>
-            <textarea type="text" class="form-control" id="description"
-            required name="description" [(ngModel)]="event.description" #description="ngModel"></textarea>
-            <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
-              <span>Description field is required</span>
+        </div>
+
+        <div class="mb-3">
+          <label for="imgUrl" class="form-label">Image URL:</label>
+          <input type="text" class="form-control" id="imgUrl" required name="imgUrl" [(ngModel)]="event.imgUrl" #imgUrl="ngModel" />
+          <div *ngIf="imgUrl.invalid && (imgUrl.dirty || imgUrl.touched)" class="alert alert-danger mt-2">
+            <span>Img URL field is required</span>
           </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="maxParticipants" class="form-label">Max Participants:</label>
+          <input type="number" class="form-control" id="maxParticipants" required name="maxParticipants" [(ngModel)]="event.maxParticipants" #maxParticipants="ngModel" />
+          <div *ngIf="maxParticipants.invalid && (maxParticipants.dirty || maxParticipants.touched)" class="alert alert-danger mt-2">
+            <span>Nr of participants is required</span>
           </div>
-          <div>
-            <label for="imgUrl">Image URL:</label>
-            <input type="text" class="form-control" id="imgUrl"
-            required name="imgUrl" [(ngModel)]="event.imgUrl" #imgUrl="ngModel"/>
-            <div [hidden]="imgUrl.valid || imgUrl.pristine" class="alert alert-danger">
-              <span>Img url field is required</span>
-          </div>
-          </div>
-          <div>
-            <label for="maxParticipants">Max Participants:</label>
-            <input type="number" class="form-control" id="maxParticipants"
-            required name="maxParticipants" [(ngModel)]="event.maxParticipants" #maxParticipants="ngModel" />
-            <div [hidden]="maxParticipants.valid || maxParticipants.pristine" class="alert alert-danger">
-              <span>Nr of participants is required</span>
-          </div>
-          </div>
-          <button type="submit" class="btn btn-default" [disabled]="!eventForm.form.valid" (click)="updateEvent(); eventForm.reset()">Update the event</button>
-    </form>
+        </div>
+
+        <button type="submit" class="btn btn-primary" [disabled]="!eventForm.form.valid" (click)="updateEvent()">Update the event</button>
+      </form>
     </div>
+  </div>
 </div>
