--- a/frontend/src/app/event-features/event-search-by/event-search-by.component.html
+++ b/frontend/src/app/event-features/event-search-by/event-search-by.component.html
@@ -1,6 +1,7 @@
-<input type="text" placeholder="keyword" #keyword [(ngModel)]="theKeyword"/>
-<button class="primary" type="button" (click)="search(); eventsToDisplay();" >Search</button>
-
+<div class="search-bar">
+  <input type="text" placeholder="Keyword" #keyword [(ngModel)]="theKeyword" />
+  <button class="primary" type="button" (click)="search(); eventsToDisplay();">Search</button>
+</div>
 <div *ngIf="filteredEvents.length == 0" >
   <p>NO EVENTS TO DISPLAY!</p>
 </div>
