--- a/frontend/src/app/event-features/event-specifics/event-specifics.component.html
+++ b/frontend/src/app/event-features/event-specifics/event-specifics.component.html
@@ -1,18 +1,62 @@
-{{ eventSpecificsModel | json }}
-<div >
+<div class="container my-5">
+  <div class="alert alert-success mt-2" *ngIf="showSuccessMessage">
+    Event specifics added successfully!
   </div>
-<div>
-  <form (ngSubmit)="onSubmit()" #eventForm="ngForm">
-    <div>
-      <label for="date">Choose a date:</label>
-      <input type="date" id="date" name="date" [(ngModel)]="eventSpecificsModel.date" #dateInput="ngModel">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center">Event Specifics</h2>
+          <form (ngSubmit)="onSubmit()" #eventForm="ngForm">
+            <div class="mb-3">
+              <label for="date" class="form-label">Choose a date:</label>
+              <input
+                type="date"
+                class="form-control"
+                id="date"
+                name="date"
+                [(ngModel)]="eventSpecificsModel.date"
+                #dateInput="ngModel"
+                [min]="getCurrentDate()"
+                required />
+                <div [hidden]="dateInput.valid || dateInput.pristine" class="alert alert-danger mt-2">
+                  Date is reuired!
+                </div>
+            </div>
+            <div class="mb-3">
+              <label for="cities" class="form-label">Choose a city:</label>
+              <select
+                class="form-select"
+                id="cities"
+                name="selectedCityId"
+                [(ngModel)]="selectedCityId"
+                required>
+                <option value="" disabled>Select a city</option>
+                <option *ngFor="let c of cities" [value]="c.id">{{ c.name }}</option>
+              </select>
+              <div *ngIf="!selectedCityId" class="alert alert-danger mt-2">
+                City is required.
+              </div>
+            </div>
+            <div class="text-center">
+              <button
+                type="submit"
+                class="btn btn-primary"
+                (click)="addSpecifics();"
+                [disabled]="!eventForm.form.valid">
+                Submit
+              </button>
+              <button
+              type="submit"
+              class="btn btn-success done-button"
+              (click)="onSubmit();"
+              >
+              Done
+            </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-      <div>
-      <label for="cities">Choose a city:</label>
-      <select id="cities" name="selectedCityId" [(ngModel)]="selectedCityId">
-        <option *ngFor="let c of cities" [value]="c.id">{{ c.name }}</option>
-      </select>
-    </div>
-    <button type="submit" (click)="addSpecifics()">Submit</button>
-  </form>
+  </div>
 </div>
