--- a/frontend/src/app/event/event.component.html
+++ b/frontend/src/app/event/event.component.html
@@ -1,10 +1,31 @@
-<h2 class="bigger-badge">My Events</h2>
 <app-event-search-by></app-event-search-by>
-<ul class="container">
-  <li *ngFor="let e of event">
-    <button [class.selected]="e === selectedEvent" type="button" class="card" (click)="OnSelect(e)">
-      <p>{{ e.name }}</p>
-    </button>
-  </li>
-</ul>
-<app-event-detail [event]="selectedEvent"  class="card"></app-event-detail>
+
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="card">
+        <div class="card-header bg-primary text-white">
+          <h5 class="card-title mb-0">Event List</h5>
+        </div>
+        <div class="card-body">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <ng-container *ngFor="let e of event; let i = index">
+              <div class="col">
+                <div class="card h-100">
+                  <button [class.selected]="e === selectedEvent" type="button" class="card" (click)="OnSelect(e)">
+                    <div class="card-body">
+                      <h5 class="card-title mb-3">{{e.name}}</h5>
+                      <p class="card-text mb-2"><strong>Topic:</strong> {{e.topic}}</p>
+                      <p class="card-text mb-2"><strong>Description:</strong> {{e.description}}</p>
+                    </div>
+                  </button>
+                </div>
+              </div>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    </div>
+    <app-event-detail [event]="selectedEvent" class="col-md-3"></app-event-detail>
+  </div>
+</div>
