--- a/frontend/src/app/event-features/event-register/event-register.component.html
+++ b/frontend/src/app/event-features/event-register/event-register.component.html
@@ -1,23 +1,12 @@
-<h1>Register</h1>
-<div *ngIf="eventSpecifics">
-  <h2>Event Specifics for {{ eventSpecifics.events?.name }}</h2>
-  <p><strong>City:</strong> {{ eventSpecifics.city?.name }}</p>
-  <p><strong>Date:</strong> {{ eventSpecifics.date }}</p>
-</div>
-<div>
-  <p><strong>Name:</strong> {{ currentUser.firstname }}</p>
-  <p><strong>Lastname:</strong> {{ currentUser.lastname }}</p>
-</div>
-<button type="button" (click)="registerUserToEvent()">Confirm participation</button>
 <div class="card mb-3">
   <div class="card-header bg-primary text-white">
     <h1>Register</h1>
   </div>
   <div class="card-body">
-    <div *ngIf="eventSpecifics">
-      <h2>Event Specifics for {{ eventSpecifics.events?.name }}</h2>
-      <p><strong>City:</strong> {{ eventSpecifics.city?.name }}</p>
-      <p><strong>Date:</strong> {{ eventSpecifics.date }}</p>
+    <div>
+      <h2>Event Specifics for {{ eventSpec.events?.name }}</h2>
+      <p><strong>City:</strong> {{ eventSpec.city?.name }}</p>
+      <p><strong>Date:</strong> {{ eventSpec.date }}</p>
     </div>
     <div>
       <p><strong>Name:</strong> {{ currentUser.firstname }}</p>
