--- a/frontend/src/app/event-features/event-specifics/event-specifics.component.html
+++ b/frontend/src/app/event-features/event-specifics/event-specifics.component.html
@@ -42,14 +42,14 @@
               <button
                 type="submit"
                 class="btn btn-primary"
-                (click)="addSpecifics();"
+                (click)="addSpecifics()"
                 [disabled]="!eventForm.form.valid">
                 Submit
               </button>
               <button
               type="submit"
               class="btn btn-success done-button"
-              (click)="onSubmit();"
+              (click)="onSubmit()"
               >
               Done
             </button>
