--- a/frontend/src/app/event-features/event-search-by/event-search-by.component.sass
+++ b/frontend/src/app/event-features/event-search-by/event-search-by.component.sass
@@ -6,7 +6,7 @@ body
   background-color: #f5f5f5
 
 .search-bar
-  position: fixed
+  position: absolute
   top: 90px
   left: 50%
   transform: translateX(-50%)
