--- a/frontend/src/app/event-features/event-specifics/event-specifics.component.html
+++ b/frontend/src/app/event-features/event-specifics/event-specifics.component.html
@@ -1,3 +1,4 @@
+<hr>
 <div class="container my-5">
   <div class="alert alert-success mt-2" *ngIf="showSuccessMessage">
     Event specifics added successfully!
@@ -49,7 +50,7 @@
               <button
               type="submit"
               class="btn btn-success done-button"
-              (click)="onSubmit()"
+              (click)="done()"
               >
               Done
             </button>
