--- a/frontend/src/app/event-features/event-delete/event-delete.component.html
+++ b/frontend/src/app/event-features/event-delete/event-delete.component.html
@@ -14,7 +14,7 @@
       <div *ngFor="let es of alleventSpecifics">
         <p><span>{{ es.city?.name }} </span> <span>| {{es.date}}</span> </p>
       </div>
-      <button type="button" class="btn btn-danger mt-3" (click)="delete()">Delete</button>
+      <button type="button" class="btn btn-danger mt-3" (click)="delete(); redirect();">Delete</button>
     </div>
   </div>
 </div>
