--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -35,12 +35,17 @@
               <i class="fas fa-comment-dots"></i> Messaging
             </a>
           </li>
-    
+
             <li class="nav-item" *ngIf="loggedIn">
                 <a class="nav-link" routerLink="/notifications">
                     <i class="fas fa-bell"></i> Notifications
                 </a>
             </li>
+          <li class="nav-item" *ngIf="loggedIn">
+            <a class="nav-link" routerLink="/event">
+              <i class="bi bi-brightness-high-fill"></i> Events
+            </a>
+          </li>
             <li class="nav-item dropdown" *ngIf="loggedIn">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -60,7 +65,7 @@
                 </li>
               </ul>
             </li>
-            
+
             <li class="nav-item" *ngIf="!loggedIn" routerLink="/signin">
                 <a class="nav-link" href="#">
                 <i class="fas fa-sign-in-alt"></i> Sign In
@@ -70,9 +75,8 @@
                 <a class="nav-link" *ngIf="!loggedIn" routerLink="/signup">
                     <i class="fas fa-user-plus"></i> Sign Up
                 </a>
-            </li>       
+            </li>
         </ul>
       </div>
     </div>
   </nav>
-  
